A bit more progress...